Change to GitHub pages

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Sorting Algorithm Visualiser</title>
-    <link type="text/css" rel="stylesheet" href="/css/sorting.css" />
-    <link type="image/png" rel="shortcut icon" href="/img/favicon.png"/>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/sortingPage.js"></script>
-    <script type="text/javascript" src="/js/sortingFunction.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/sorting.css" />
+    <link type="image/png" rel="shortcut icon" href="img/favicon.png"/>
 </head>
 
 <body>
     <div class="header">
-        <a href="."><h1 id="title"">Sorting Algorithm Visualiser</h1></a>
+        <a href="."><h1 id="title">Sorting Algorithm Visualiser</h1></a>
     </div>
     <div class="options-canvas-div">
         <div class="sidebar">
@@ -35,5 +32,8 @@
         </div>
     <div class="canvas"></div>
 </body>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/sortingPage.js"></script>
+<script type="text/javascript" src="js/sortingFunction.js"></script>
 
 </html>
